--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     </head>
 
     <body>
-        <div class="button">
-            <button id="reset">Reset</button>
-        </div>
+        <header>
+            <h1>Etch-A-Sketch</h1>
+        </header>
+        
         <div class="container"></div>
+        <div class="button-container">
+            <button id="reset">Reset Size</button>
+            <button id="clear">Clear Grid</button>
+            <button id="random">Switch to Random</button>
+            <button id="dark">Dark Mode</button>
+        </div>
+        <div class="mode">
+            <h2></h3>
+        </div>
     </body>
 </html>
